update widearea ref

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,6 @@
     <!--[if lt IE 9]>
     <script src="plugins/html5shiv.min.js"></script>
     <script src="plugins/respond.min.js"></script>
-    <script src="plugins/widearea/widearea.js"></script>
     <![endif]-->
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
@@ -177,6 +176,7 @@
 <script src="{{ url_for('static', filename='plugins/bootstrap-switch/bootstrap-switch.min.js') }}"></script>
 <script src="{{ url_for('static', filename='plugins/select2/select2.full.min.js') }}"></script>
 <script src="{{ url_for('static', filename='plugins/adminlte/js/app.min.js') }}"></script>
+<script src="{{ url_for('static', filename='plugins/widearea/widearea.js') }}"></script>
 <script src="{{ url_for('static', filename='js/global.js') }}"></script>
 {% block scripts %}{% endblock %}
 </body>
